--- a/VATA_djangoProject/VATA_mainApp/templates/mainGUI/2ndView.html
+++ b/VATA_djangoProject/VATA_mainApp/templates/mainGUI/2ndView.html
@@ -2,40 +2,96 @@
 <html>
 <head>
     <title>Verde a tu alcance</title>
-    <link rel="stylesheet" href="/static/VATA_mainApp/VATA_CSS.css">
     <style>
-        
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
 
         .contenedor {
             display: flex;
             justify-content: space-between;
-            width: 100%;
-         /* Ajusta el ancho máximo según tus necesidades */
+            padding: 10px;
+            background-color: #2ecc71;
         }
 
-        .contenido {
+        .productos {
             display: flex;
             flex-direction: column;
-            overflow-y: auto;
-            max-height: 400px; /* Ajusta la altura máxima según tus necesidades */
+            align-items: center;
+            padding: 20px;
         }
 
-        .recuadroazul1{
-            margin-bottom: 20px; 
-            background-color: rgb(16, 60, 86);
-            width:700px ;
-            height: 300px;
-            position:relative ;
-            top: 20%;
-            left: 10%;
-        }
-        .lineaseparadora{
-            position: relative;top:10%; left: 2%;
-            width:700px; height:50px ;
-            background-color: rgb(255, 217, 171) ;
-            text-align: center; color: rgb(255, 217, 171)
+        .producto {
+            display: flex;
+            align-items: flex-start;
+            margin-bottom: 20px;
+            width: 80%;
+            max-width: 800px;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            padding: 20px;
         }
 
+        .producto img {
+            max-width: 300px;
+            max-height: 300px;
+            margin-right: 40px;
+            border-radius: 4px;
+            object-fit: cover;
+        }
+
+        .detalles {
+            flex: 1;
+            text-align: center;
+        }
+
+        #retroceder {
+            padding: 10px 20px;
+            background-color: #ffffff;
+            color: #2ecc71;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            margin-bottom: 20px;
+        }
+
+        #retroceder:hover {
+            background-color: #27ae60;
+        }
+
+        .resultados {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+
+
+        /* Estilo base para la estrella */
+        #favorito-button {
+            font-size: 24px; /* Tamaño de la estrella */
+            color: yellow; /* Color base de la estrella */
+            border: none; /* Elimina el borde */
+            background: none; /* Fondo transparente */
+            cursor: pointer; /* Cursor al pasar sobre la estrella */
+            outline: none; /* Quita el contorno al hacer clic */
+        }
+
+        /* Estilo para la estrella brillante */
+        #favorito-activo {
+            animation: brillar 0.5s infinite alternate;
+        }
+
+        @keyframes brillar {
+            to {
+                text-shadow: 0 0 10px yellow, 0 0 20px yellow, 0 0 30px yellow;
+            }
+        }
+           
     </style>
 </head>
 <body>
@@ -65,9 +121,8 @@
  </div>
 
 
-
     <div class="contenedor">
-        <button id="retroceder">Atras</button>
+        <button id="retroceder">Atrás</button>
     </div>
 
     <script>
@@ -75,23 +130,109 @@
             window.history.back();
         });
     </script>
-    
-    <h1> Logrado:</h1>
-    <div id="contene" class="contenido">
-        {% if dataLugares %}
-        {% for lugar in dataLugares %}
-            {% if  lugar.placeCategory == receivedData %}              
-                <div id="recuadroazul1">
-                <div id="p" > Nombre del lugar: {{lugar.placeName}}</div>
-                <div id="p2" > Direccion del lugar: {{lugar.location}} </div>
-                <div id="recuadroblanco"> Descripcion: {{lugar.descripcion}}</div>
-                <div id="recuadroblanco2"> <img src="{{lugar.placeImage}}" alt="Imagen del lugar"></div>
-            </div>
-            <div id="lineaseparadora">.</div>
-            {% endif%}
-        {% endfor %}
-    {% endif%}
-    </div>
 
+    <div class="productos">
+        {% if dataLugares %}
+            {% with count=0 %}
+                {% for lugar in dataLugares %}
+                    {% if lugar.placeCategory == receivedData %}
+                        {% with count=count|add:1 %}
+                            <div class="producto">
+                                <img src="{{ lugar.placeImage }}" alt="Imagen del lugar">
+                                <div class="detalles">
+                                    <h3>{{ lugar.placeName }}</h3>
+                                    <p><strong>Dirección:</strong> {{ lugar.location }}</p>
+                                    <p><strong>Descripción:</strong> {{ lugar.descripcion }}</p>
+                                </div>
+                                <button onclick="toggleFavorito(this)" data-lugar-id="{{ lugar.id }}" class="favorito-button">★</button>
+                                    <script>
+                                                            function toggleFavorito(button) {
+                                            const lugarId = button.getAttribute('data-lugar-id');
+                                            
+                                            fetch(`/favorito/${lugarId}/`)
+                                            .then(response => response.json())
+                                            .then(data => {
+                                                if (data.favorito) {
+                                                    button.classList.add('favorito-activo');
+                                                } else {
+                                                    button.classList.remove('favorito-activo');
+                                                }
+                                            })
+                                            .catch(error => console.error('Error:', error));
+                                        }
+                                    </script>
+
+                                    <script>
+                                            function toggleFavorito(button) {
+                                                const lugarId = button.getAttribute('data-lugar-id');
+                                                
+                                                fetch(`/ruta/para/agregar_o_eliminar_favorito/${lugarId}/`, {
+                                                    method: 'POST', // O 'DELETE' para eliminar favorito
+                                                    headers: {
+                                                        'Content-Type': 'application/json',
+                                                        // Puedes enviar headers adicionales si es necesario
+                                                    },
+                                                    // Puedes enviar datos adicionales en el cuerpo de la solicitud si es necesario
+                                                    // body: JSON.stringify({ key: value }),
+                                                })
+                                                .then(response => response.json())
+                                                .then(data => {
+                                                    // Aquí puedes manejar la respuesta, por ejemplo, actualizar la apariencia del botón
+                                                    if (data.favorito) {
+                                                        button.classList.add('favorito-activo');
+                                                    } else {
+                                                        button.classList.remove('favorito-activo');
+                                                    }
+                                                })
+                                                .catch(error => console.error('Error:', error));
+                                            }
+                                    </script>
+
+                                    
+                            </div>
+                        {% endwith %}
+                    {% endif %}
+                {% endfor %}
+                
+            {% endwith %}
+        {% endif %}
+    </div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
